apps/security/vaultwarden/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: security
    app.kubernetes.io/part-of: selfh-k8s
